syntax = "proto3";

option go_package = "github.com/IvanVojnic/bandEFroom/proto";

package room;

service invite {
  rpc SendInvite(SendInviteRequest) returns (SendInviteResponse){}
  rpc AcceptInvite(AcceptInviteRequest) returns (AcceptInviteResponse){}
  rpc DeclineInvite(DeclineInviteRequest) returns (DeclineInviteResponse){}
}

message SendInviteRequest {
  string userCreatorID = 1;
  repeated string usersID = 2;
  string place = 3;
  string date = 4;
}

message SendInviteResponse {

}

message AcceptInviteRequest {
  string userID = 1;
  string roomID = 2;
}

message AcceptInviteResponse {

}

message DeclineInviteRequest {
  string userID = 1;
  string roomID = 2;
}

message DeclineInviteResponse {

}